included all the api

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,11 @@
-# PostgreSQL (Production/Cloud)
-# DATABASE_URL=postgresql://neondb_owner:npg_dKVvSqGcjT81@ep-super-silence-ai6ldd8r-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+# Database Configuration
+# For local development with PostgreSQL
+DATABASE_URL=postgresql://username:password@localhost:5432/fleetflow
 
-# SQLite (Local Development - use this if no internet)
-DATABASE_URL=sqlite:///./fleetflow.db
+# For cloud PostgreSQL (like Neon, Railway, etc.)
+# DATABASE_URL=postgresql://user:password@host:5432/database?sslmode=require
 
-SECRET_KEY=supersecretfleetflowkey
+# Security Configuration
+SECRET_KEY=your-secret-key-here-change-this-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
